deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goofy-node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: node-container
        image: edraithenni/goofy-app:6bfeda08b3fff23296ebbc0f96b044eb2793c4d0
        ports:
        - containerPort: 3000
