service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goofy-node-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: web
