ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goofy-ingress              
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"   
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - goofy-app.local           
      secretName: my-node-tls         
  rules:
    - host: goofy-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-node-service  
                port:
                  number: 80
